--- a/PMS-PropertyHapa.Staff/Views/Assests/AssetDetails.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/AssetDetails.cshtml
@@ -6,21 +6,22 @@
     var assetId = ViewBag.assetId;
 }
 <div class="page-body">
-    <div class="container-fluid my-4">
+    <div class="container-fluid">
         <div class="page-title">
-            <div class="row mb-3">
-                <div class="col-12 col-sm-8 d-flex align-items-center">
-                    <h3 class="mb-0">Assets</h3>
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <h3>Assets</h3>
                 </div>
-                <div class="col-12 col-sm-2">
-                    <ol class="breadcrumb bg-transparent p-0">
-                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item">Assets</li>
+                <div class="col-12 col-sm-6">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/Assests/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Reports</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
                 </div>
             </div>
         </div>
+    </div>
         <div class="col-md-12 project-list">
             <div class="card">
                 <div class="row">
