--- a/PMS-PropertyHapa.Staff/Views/Reports/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Reports/Index.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            @* <div class="col-md-4">
                 <div class="card">
                     <div class="card-body d-flex justify-content-center align-items-center">
                         <i class="icon-files fa-3x"></i>
@@ -29,6 +29,42 @@
                     <div class="card-footer">
                         <h4 class="card-title text-center">
                             <a href="@Url.Action("TaskReports", "Reports")">View Task Reports</a>
+                        </h4>
+                    </div>
+                </div>
+            </div> *@
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <i class="icon-files fa-3x"></i>
+                    </div>
+                    <div class="card-footer">
+                        <h4 class="card-title text-center">
+                            <a href="@Url.Action("FinanceReports", "Reports")">Finance Reports</a>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <i class="icon-files fa-3x"></i>
+                    </div>
+                    <div class="card-footer">
+                        <h4 class="card-title text-center">
+                            <a href="@Url.Action("TenantReports", "Reports")">Tenant Reports</a>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <i class="icon-files fa-3x"></i>
+                    </div>
+                    <div class="card-footer">
+                        <h4 class="card-title text-center">
+                            <a href="@Url.Action("AssetReports", "Reports")">Asset Reports</a>
                         </h4>
                     </div>
                 </div>
@@ -52,12 +88,12 @@
                     </div>
                     <div class="card-footer">
                         <h4 class="card-title text-center">
-                            <a href="@Url.Action("InvoiceReports", "Reports")">Invoice Reports</a>
+                            <a href="@Url.Action("LandlordReports", "Reports")">Landlord Reports</a>
                         </h4>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+@*             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body d-flex justify-content-center align-items-center">
                         <i class="icon-files fa-3x"></i>
@@ -68,7 +104,7 @@
                         </h4>
                     </div>
                 </div>
-            </div>
+            </div> *@
         </div>
     </div>
 </div>
